--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
@@ -34,60 +34,28 @@
             <div class="sidebar-collapse">
                 <ul class="nav" id="main-menu">
                     <li class="text-center">
-                        <img src="assets/img/find_user.png" class="user-image img-responsive" />
+                        <img src="/img/find_user.png" class="user-image img-responsive" />
                     </li>
 
 
                     <li>
-                        <a class="active-menu" href="index.html"><i class="fa fa-dashboard fa-3x"></i> Dashboard</a>
+                        <a class="active-menu" href="index.html"><i class="fa fa-book fa-2x"></i> Courses </a>
                     </li>
                     <li>
-                        <a href="ui.html"><i class="fa fa-desktop fa-3x"></i> UI Elements</a>
+                        <a href="ui.html"><i class="fa fa-pencil fa-2x"></i> Chapters</a>
                     </li>
                     <li>
-                        <a href="tab-panel.html"><i class="fa fa-qrcode fa-3x"></i> Tabs & Panels</a>
+                        <a href="tab-panel.html"><i class="fa fa-question-circle fa-2x"></i> Questions</a>
                     </li>
                     <li>
-                        <a href="chart.html"><i class="fa fa-bar-chart-o fa-3x"></i> Morris Charts</a>
+                        <a href="chart.html"><i class="fa fa-print fa-2x"></i>Exams</a>
                     </li>
                     <li>
-                        <a href="table.html"><i class="fa fa-table fa-3x"></i> Table Examples</a>
+                        <a href="table.html"><i class="fa fa-users fa-2x"></i> Students</a>
                     </li>
-                    <li>
-                        <a href="form.html"><i class="fa fa-edit fa-3x"></i> Forms </a>
-                    </li>
-
-
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap fa-3x"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Second Level Link</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Link</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Link<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Link</a>
-                                    </li>
-
-                                </ul>
-
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="blank.html"><i class="fa fa-square-o fa-3x"></i> Blank Page</a>
-                    </li>
+                    
+                    
+                    
                 </ul>
 
             </div>
